# PAD_Lab1

./: .env  .gitignore  .gitmodules  CMakeLists.txt  build.sh  docker-compose.yml  json_messages.readme
Broker/: .env  .gitignore  Dockerfile  Makefile  broker.db  go.mod  go.sum
Broker/cmd/app/: main.go
Broker/internal/client/: handler.go
Broker/internal/config/: config.go
Broker/internal/db/: db.go
Broker/internal/messages/: messages.go
Broker/internal/models/: Sender.go  Subscriber.go  Topic.go
Broker/pkg/broker/: broker.go
Broker/pkg/grpc-server/: Receiver.pb.go  Sender.pb.go  grpc.go
Broker/pkg/hello/: hello.go
Broker/pkg/logging/: logging.go
Broker/pkg/receiver/: Receiver.go  Receiver_grpc.pb.go
Broker/pkg/sender/: Sender.go  Sender_grpc.pb.go
Broker/pkg/socket/: socket.go
Broker/proto/: Broker.proto  Receiver.proto  Sender.proto
Receiver/: CMakeLists.txt  IReceiver.h  MainFrame.cpp  MainFrame.h  RPCReceiver.cpp  RPCReceiver.h  RPCReceiver_Listener.cpp  RPCReceiver_Listener.h  SocketReceiver.cpp  SocketReceiver.h  build.sh  generate_ui_resources.sh  main.cpp
Receiver/ui/: main.css  main.htm  main.js
Sender/: CMakeLists.txt  ISender.h  MainFrame.cpp  MainFrame.h  RPCSender.cpp  RPCSender.h  Sender.h  SocketSender.cpp  SocketSender.h  build.sh  generate_ui_resources.sh
Sender/ui/: main.css  main.htm  main.js
broker-py/: main.py
broker-py/sources/sock_server/: __init__.py  socket.py
proto/: Receiver.proto  Sender.proto
proto/Receiver/: Receiver.proto
proto/Sender/: Sender.proto
